<resources>
    <string name="app_name">examProject</string>
    <string name="kea">KEA</string>
    <string name="bank">Bank</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="accounts">Manage accounts</string>
    <string name="username">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="apply_for_account">Apply for account</string>
    <string name="pay_bill">Pay bill</string>
    <string name="transfer_money">Transfer money</string>
    <string name="user_profile">User profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="cancel">Cancel</string>
    <string name="submit_application">Submit application</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="transfer_between_your_own_accounts">Transfer between your own accounts</string>
    <string name="transfer_to_others">Transfer to others</string>
    <string name="from_account">From account</string>
    <string name="to_account">To account</string>
    <string name="enter_amount_transfer">Enter amount to transfer</string>
    <string name="registration_number">Registration number</string>
    <string name="account_number">Account number</string>
    <string name="confirm_recipient">Confirm recipient</string>
    <string name="nem_id">NEM ID</string>
    <string name="user_id">User-id</string>
    <string name="next">Next</string>
    <string name="key_card">Key card: X123"\u2014"456"\u2014"789</string>
    <string name="key">1234</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="bill_type">+75 &#32; &lt;</string>
    <string name="payment_id">Payment ID</string>
    <string name="plus">+</string>
    <string name="creditor_number">Creditor number</string>
    <string name="less_than">&lt;</string>
    <string name="enter_amount_pay">Enter amount to pay</string>
    <string name="empty"> </string>
</resources>
