<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNemIDLight"
    tools:context=".NemIDCodeCardActivity">

    <TextView
        android:id="@+id/imageBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageViewNemID"
        />

    <ImageView
        android:id="@+id/imageViewNemID"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:src="@drawable/nem_id_logo"
        android:contentDescription="@string/nem_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/dividerTop"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorNemIDDark"
        app:layout_constraintTop_toBottomOf="@id/imageBackground"
        />

    <TextView
        android:id="@+id/textViewNemIDKeyCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/key_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerTop"
        app:layout_constraintBottom_toTopOf="@+id/editTextNemIDKey"
        />

    <TextView
        android:id="@+id/textViewNemIDKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/key"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextNemIDKey"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNemIDKey"
        />

    <EditText
        android:id="@+id/editTextNemIDKey"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@color/colorWhite"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:hint="@string/empty"
        android:inputType="number"
        android:autofillHints=""
        tools:targetApi="o"
        app:layout_constraintStart_toEndOf="@id/textViewNemIDKey"
        app:layout_constraintBottom_toTopOf="@+id/dividerCenter"
        />

    <View
        android:id="@+id/dividerCenter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="217dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/buttonNemIDNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorNemIDLight"
        android:backgroundTint="@color/colorNemIDDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonNemIDCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/buttonNemIDCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorNemIDLight"
        android:backgroundTint="@color/colorNemIDDark"
        app:layout_constraintStart_toEndOf="@id/buttonNemIDNext"
        app:layout_constraintEnd_toEndOf="@id/textViewNemIDKeyCardNumber"
        app:layout_constraintBottom_toBottomOf="@id/buttonNemIDNext"
        />

</android.support.constraint.ConstraintLayout>