<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserFormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/first_name"
                android:inputType="textCapWords"
                android:autofillHints=""
                android:textColor="@color/colorPrimaryDark"
                tools:targetApi="o"
                />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/last_name"
                android:inputType="textCapWords"
                android:autofillHints=""
                android:textColor="@color/colorPrimaryDark"
                tools:targetApi="o"
                />

            <TextView
                android:id="@+id/textViewDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/date_of_birth"
                android:autofillHints=""
                android:textColor="@color/colorPrimaryDark"
                android:background="?attr/editTextBackground"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                tools:targetApi="o"
                />

            <Button
                android:id="@+id/buttonSubmitApplication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/submit_application"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/buttonCancelUserForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/cancel"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="false"
                />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>