<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNemIDLight"
    tools:context=".NemIDActivity">

    <View
        android:id="@+id/imageBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageViewNemID"
        />

    <ImageView
        android:id="@+id/imageViewNemID"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:src="@drawable/nem_id_logo"
        android:contentDescription="@string/nem_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/dividerTop"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorNemIDDark"
        app:layout_constraintTop_toBottomOf="@id/imageBackground"
        />

    <TextView
        android:id="@+id/textViewNemIDFromAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/from_account"
        app:layout_constraintStart_toStartOf="@+id/editTextNemIDUserID"
        app:layout_constraintTop_toTopOf="@+id/dividerTop"
        />

    <TextView
        android:id="@+id/textViewNemIDToAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/to_account"
        app:layout_constraintStart_toStartOf="@+id/editTextNemIDUserID"
        app:layout_constraintTop_toBottomOf="@+id/textViewNemIDFromAccount"
        />

    <TextView
        android:id="@+id/textViewNemIDAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/enter_amount"
        app:layout_constraintStart_toStartOf="@+id/editTextNemIDUserID"
        app:layout_constraintTop_toBottomOf="@+id/textViewNemIDToAccount"
        />

    <TextView
        android:id="@+id/textViewNemIDUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/user_id"
        app:layout_constraintStart_toStartOf="@+id/editTextNemIDUserID"
        app:layout_constraintBottom_toTopOf="@+id/editTextNemIDUserID"
        />

    <EditText
        android:id="@+id/editTextNemIDUserID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorWhite"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:inputType="textPassword"
        android:hint="@string/empty"
        android:autofillHints=""
        tools:targetApi="o"
        app:layout_constraintStart_toStartOf="@id/editTextNemIDPassword"
        app:layout_constraintEnd_toEndOf="@id/editTextNemIDPassword"
        app:layout_constraintBottom_toTopOf="@id/textViewNemIDPassword"
        />

    <TextView
        android:id="@+id/textViewNemIDPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/editTextNemIDPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextNemIDPassword"
        />

    <View
        android:id="@+id/dividerCenter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="217dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/editTextNemIDPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="64dp"
        android:background="@color/colorWhite"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:inputType="textPassword"
        android:hint="@string/empty"
        android:autofillHints=""
        tools:targetApi="o"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerCenter"
        />

    <Button
        android:id="@+id/buttonNemIDNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorNemIDLight"
        android:backgroundTint="@color/colorNemIDDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonNemIDCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/buttonNemIDCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorNemIDLight"
        android:backgroundTint="@color/colorNemIDDark"
        app:layout_constraintStart_toEndOf="@id/buttonNemIDNext"
        app:layout_constraintEnd_toEndOf="@id/editTextNemIDPassword"
        app:layout_constraintBottom_toBottomOf="@id/buttonNemIDNext"
        />

</android.support.constraint.ConstraintLayout>