<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OverviewActivity">

    <ScrollView
        android:id="@+id/scrollViewOverview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewCurrentUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="false"
                android:padding="8dp"
                android:layout_marginTop="64dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <Button
                android:id="@+id/buttonManageAccounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="48dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"
                android:text="@string/accounts"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                />

            <Button
                android:id="@+id/buttonTransferMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:backgroundTint="@color/colorPrimaryLight"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/transfer_money"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <Button
                android:id="@+id/buttonPayBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:backgroundTint="@color/colorPrimaryLight"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/pay_bill"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <Button
                android:id="@+id/buttonUserProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:text="@string/user_profile"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>