<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".TransferActivity">

    <ScrollView
        android:id="@+id/scrollViewOverview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="128dp"
            android:paddingBottom="128dp"
            android:text="@string/transfer_money"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            />

        <Button
            android:id="@+id/buttonTransferBetweenOwnAccounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:backgroundTint="@color/colorWhite"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/transfer_between_your_own_accounts"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />

        <Button
            android:id="@+id/buttonTransferToOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:backgroundTint="@color/colorWhite"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/transfer_to_others"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />

    </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>